# mdx-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-14-mdx-cli.md
docs/superpowers/specs/: 2026-04-14-mdx-cli-design.md
src/mdx_cli/: __init__.py  main.py  settings.py
src/mdx_cli/api/: __init__.py  auth.py  client.py  pagination.py  parallel.py  spinner.py
src/mdx_cli/api/endpoints/: auth.py  networks.py  projects.py  tasks.py  templates.py  vms.py
src/mdx_cli/commands/: __init__.py  _common.py  _name_pattern.py  acl.py  auth.py  dnat.py  network.py  project.py  task.py  template.py  vm.py
src/mdx_cli/credentials/: __init__.py  store.py
src/mdx_cli/models/: __init__.py  auth.py  enums.py  history.py  network.py  project.py  task.py  template.py  vm.py
src/mdx_cli/output/: __init__.py  formatting.py  tables.py
tests/: conftest.py  test_main.py  test_name_pattern.py  test_settings.py
tests/test_api/: test_auth.py  test_client.py  test_parallel.py
tests/test_api/test_endpoints/: test_auth.py  test_history.py  test_networks.py  test_projects.py  test_tasks.py  test_templates.py  test_vms.py
tests/test_commands/: test_acl.py  test_auth.py  test_common.py  test_dnat.py  test_network.py  test_project.py  test_task.py  test_template.py  test_vm.py
tests/test_credentials/: test_project_id.py  test_store.py
tests/test_models/: test_enums.py  test_history.py  test_network.py  test_task.py  test_template.py  test_vm.py
tests/test_output/: test_formatting.py
